syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply); // yangi
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
